fixed circleci config

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,3 +7,9 @@ jobs:
       - checkout
       - run: npm install
       - run: npm test
+workflows:
+  version: 2
+  test:
+    jobs:
+      - test
+
