commented some stuff out

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -36,6 +36,6 @@ workflows:
       - build-and-push:
           requires:
             - test
-      - deploy
-          requires:
-            - test
+      # - deploy
+      #     requires:
+      #       - test
