changed nginx conf

--- a/default.conf
+++ b/default.conf
@@ -1,13 +1,14 @@
 
 server {
     listen       80;
-    listen [::]:80;
-    
+  
     server_name  andreas.training.trambo.cloud;
+     
+    index  index.html;
+
     location / {
         root   /usr/share/nginx/html;
-        index  index.html index.htm;
-    	autoindex on;
+       	autoindex on;
     }
 
     error_page   500 502 503 504  /50x.html;
